--- a/SF_Project-01/Project_01_hh_database.ipynb
+++ b/SF_Project-01/Project_01_hh_database.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 204,
+      "execution_count": 1,
       "id": "dccfde33-2452-43fb-a8a5-5c6ebc02a71d",
       "metadata": {},
       "outputs": [],
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 205,
+      "execution_count": 2,
       "id": "bc39e68e-ed02-4ee2-9235-7258a2f867a8",
       "metadata": {},
       "outputs": [],
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 206,
+      "execution_count": 3,
       "id": "5408c52c-3407-4a63-b25b-1aafa2322d28",
       "metadata": {},
       "outputs": [
@@ -359,7 +359,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 207,
+      "execution_count": 4,
       "id": "232599b5",
       "metadata": {},
       "outputs": [
@@ -426,7 +426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 208,
+      "execution_count": 5,
       "id": "be4e9bd3-a4db-4a20-82fb-6b02fc2957e0",
       "metadata": {},
       "outputs": [
@@ -580,7 +580,7 @@
               "freq         32268  "
             ]
           },
-          "execution_count": 208,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -618,7 +618,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 209,
+      "execution_count": 6,
       "id": "3f069da6-fdc9-4ae7-b514-fafe2675efd3",
       "metadata": {},
       "outputs": [
@@ -692,7 +692,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 210,
+      "execution_count": 7,
       "id": "0c44b350-72eb-4d65-8b54-a1fc449ba9fd",
       "metadata": {},
       "outputs": [
@@ -720,7 +720,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 211,
+      "execution_count": 8,
       "id": "23d50ee6",
       "metadata": {},
       "outputs": [
@@ -786,7 +786,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 212,
+      "execution_count": 9,
       "id": "603cdbe4-0ec3-4106-8eaf-c73fcdd29165",
       "metadata": {},
       "outputs": [
@@ -893,7 +893,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 213,
+      "execution_count": 10,
       "id": "1ea710ec-871b-431e-9462-c7d0fd87011b",
       "metadata": {},
       "outputs": [
@@ -949,7 +949,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 214,
+      "execution_count": 11,
       "id": "47c16488",
       "metadata": {},
       "outputs": [
@@ -995,7 +995,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 215,
+      "execution_count": 12,
       "id": "e7b5a145",
       "metadata": {},
       "outputs": [
@@ -1066,7 +1066,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 216,
+      "execution_count": 13,
       "id": "5b3a8e79-f7ab-4008-b767-12aea3a205ea",
       "metadata": {},
       "outputs": [],
@@ -1150,7 +1150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 217,
+      "execution_count": 14,
       "id": "e91f87ed-e25c-4f96-9f92-b642e8c0b4fa",
       "metadata": {},
       "outputs": [
@@ -1253,7 +1253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 218,
+      "execution_count": 15,
       "id": "f2d62796-d400-4ec1-a675-88112739a50e",
       "metadata": {},
       "outputs": [
@@ -1263,7 +1263,7 @@
               "Text(0, 0.5, 'Количество')"
             ]
           },
-          "execution_count": 218,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -1328,7 +1328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 219,
+      "execution_count": 16,
       "id": "dd7df27a-e3e8-412e-a21a-5d389b71e891",
       "metadata": {},
       "outputs": [
@@ -1338,7 +1338,7 @@
               "Text(0, 0.5, 'Количество')"
             ]
           },
-          "execution_count": 219,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -1406,7 +1406,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 220,
+      "execution_count": 17,
       "id": "6271f8ad-bd2e-4196-ae4a-5b39c4c1010e",
       "metadata": {},
       "outputs": [
@@ -1444,7 +1444,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 221,
+      "execution_count": 18,
       "id": "0d7bab83",
       "metadata": {},
       "outputs": [
@@ -47117,7 +47117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 222,
+      "execution_count": 19,
       "id": "80defb23-bfb1-4a18-8be6-bf36aa7165d5",
       "metadata": {},
       "outputs": [
@@ -47127,7 +47127,7 @@
               "Text(0.5, 1.0, 'Зависимость медианной желаемой ЗП от уровня образования')"
             ]
           },
-          "execution_count": 222,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -47181,7 +47181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 223,
+      "execution_count": 20,
       "id": "973b0cfc-a972-470a-8b4a-68744ef220c4",
       "metadata": {},
       "outputs": [
@@ -47238,7 +47238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 224,
+      "execution_count": 21,
       "id": "ad3f270f-2991-47eb-929b-e8f88a55b0d1",
       "metadata": {},
       "outputs": [
@@ -47297,7 +47297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 225,
+      "execution_count": 22,
       "id": "5a0e32a4-e68a-4365-8a39-2fe24c542c36",
       "metadata": {},
       "outputs": [
@@ -47307,7 +47307,7 @@
               "Text(0.5, 1.0, 'Зависимость зарплаты от уровня образования и возраста соискателей')"
             ]
           },
-          "execution_count": 225,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -47359,7 +47359,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 226,
+      "execution_count": 23,
       "id": "a4143e50-b900-4ec8-9ae9-fc3ec3347287",
       "metadata": {},
       "outputs": [
@@ -47369,7 +47369,7 @@
               "<AxesSubplot:title={'center':'Распределение опыта работы и возраста'}, xlabel='Возраст', ylabel='Опыт работы (годы)'>"
             ]
           },
-          "execution_count": 226,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -47427,7 +47427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 227,
+      "execution_count": 24,
       "id": "e273ec66-b8df-41e5-9b99-bdab93dddd85",
       "metadata": {},
       "outputs": [
@@ -47457,7 +47457,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 228,
+      "execution_count": 25,
       "id": "b0fee47b",
       "metadata": {},
       "outputs": [
@@ -47488,7 +47488,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 229,
+      "execution_count": 26,
       "id": "4c9907fa",
       "metadata": {},
       "outputs": [
@@ -47593,7 +47593,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 230,
+      "execution_count": 27,
       "id": "54ab0e50-c0f1-47cc-a54b-bc5c8bc363f9",
       "metadata": {},
       "outputs": [
@@ -47629,7 +47629,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 231,
+      "execution_count": 28,
       "id": "9c61b3c0-bb66-46c9-ae1e-81d3f5752b4a",
       "metadata": {},
       "outputs": [
@@ -47663,7 +47663,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 232,
+      "execution_count": 29,
       "id": "69621713-0cc5-4f1b-a1d7-bb144fa6148c",
       "metadata": {},
       "outputs": [
@@ -47697,7 +47697,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 233,
+      "execution_count": 30,
       "id": "0036a355-9ccf-4564-8b01-73d8194297e7",
       "metadata": {},
       "outputs": [
@@ -47728,7 +47728,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 234,
+      "execution_count": 31,
       "id": "949132bc-d5b6-4611-8218-0b9a504d74f4",
       "metadata": {},
       "outputs": [
@@ -47766,7 +47766,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 235,
+      "execution_count": 32,
       "id": "6a743d39-5204-48d3-8271-b9f88e68d40e",
       "metadata": {},
       "outputs": [
@@ -47776,7 +47776,7 @@
               "Text(0.5, 1.0, 'Распределение признака \"Возраст\" в логарифмическом масштабе')"
             ]
           },
-          "execution_count": 235,
+          "execution_count": 32,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -47806,7 +47806,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 236,
+      "execution_count": 33,
       "id": "853064b4",
       "metadata": {},
       "outputs": [
@@ -47996,7 +47996,7 @@
         "        cleaned (DataFrame): Количество оставшихся значений\n",
         "    \"\"\"\n",
         "    if log_scale:\n",
-        "        x = np.log(data[feature]+1)\n",
+        "        x = np.log(data[feature])\n",
         "    else:\n",
         "        x = data[feature]\n",
         "        \n",
