modified:   SF_Python_13_Pandas/SF_Python_13_Pandas_final.ipynb

--- a/SF_Python_13_Pandas/SF_Python_13_Pandas_final.ipynb
+++ b/SF_Python_13_Pandas/SF_Python_13_Pandas_final.ipynb
@@ -1133,7 +1133,7 @@
     "         autopct='%.1f%%'\n",
     "        ) \n",
     "\n",
-    "axes.set_title('Доля мужчин и женщин среди ушедших клиентов') \n"
+    "axes.set_title('Доля мужчин и женщин среди ушедших клиентов') "
    ]
   },
   {
