--- a/SF_Python_13_Pandas/SF_Python_13_Pandas_final.ipynb
+++ b/SF_Python_13_Pandas/SF_Python_13_Pandas_final.ipynb
@@ -1090,7 +1090,7 @@
     "             height=500,\n",
     "             width=600\n",
     "             )\n",
-    "fig.show()"
+    "fig.show() "
    ]
   },
   {
@@ -3669,11 +3669,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "03fef7acb0ef45d1307e4c78e8e152f4aafae7a0dcf57c70bcb86789ee9e8374"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.1 64-bit",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -3687,9 +3684,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.6"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "9b4d75ac280b6c7c3aa43866cb82dc88915409b55fec83a093dd0284cb58708e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
