modified:   SF_Project-05_ML_Regression/Project-5.ipynb

--- a/SF_Project-05_ML_Regression/Project-5.ipynb
+++ b/SF_Project-05_ML_Regression/Project-5.ipynb
@@ -249,7 +249,7 @@
     "taxi_data = pd.read_csv('data/train.csv')\n",
     "\n",
     "print(f'Размер выборки: {taxi_data.shape}')\n",
-    "taxi_data.head(4)"
+    "taxi_data.head()"
    ]
   },
   {
