modified:   SF_Project-05_ML_Regression/Project-5.ipynb

--- a/SF_Project-05_ML_Regression/Project-5.ipynb
+++ b/SF_Project-05_ML_Regression/Project-5.ipynb
@@ -1502,7 +1502,7 @@
     "# добавляем сетку\n",
     "barplot.grid()\n",
     "# добавляем наименование\n",
-    "barplot.set_title('Распределение медианной длительности поездок в зависимости от часа дня')\n"
+    "barplot.set_title('Распределение медианной длительности поездок в зависимости от часа дня')"
    ]
   },
   {
